Fix some styling
Fixed some styling and scrollbar issues

Also removed the content wrapper div which was causing some of the weird issues.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -261,6 +261,7 @@ h2 {
 */
 body {
 	background: var(--window-background);
+	height: calc(100% - var(--nav-height));
 }
 
 /* Edit View */
@@ -268,28 +269,24 @@ body {
 #edit-view {
 	width: 100%;
 	height: 100%;
-	display: flex;
-	flex-direction: row;
-	flex: 1 0px;
-	overflow: hidden;
+    position: relative;
+    overflow: hidden;
 }
 
 #preview-pane {
 	width: calc(50% - 50px);
-	height: 100%;
-	overflow: hidden;
-	height: calc(100% - 100px);
-	display: flex;
-	overflow: hidden;
-	left: 0;
-	background-color: var(--background-light);
-	align-items: center;
-	justify-content: center;
+    height: 100%;
+    display: flex;
+    position: absolute;
+    left: 0;
+    background-color: var(--background-light);
+    align-items: center;
+    justify-content: center;
 }
 
 #edit-pane {
 	width: 50%;
-	height: calc(100% - 100px);
+	height: 100%;
 	background: var(--foreground-light);
 	display: inline-block;
 	position: absolute;
@@ -368,8 +365,8 @@ body {
 
 #exit-edit-pane {
 	float: right;
-	font-weight: bold;
 	cursor: pointer;
+	color: #3D3F44;
 }
 
 #button-container {
